# python-prisma-container

./: .dockerignore  .gitignore  README.md  docker-compose.yaml  dockerfile  entrypoint.py  main.py  pyproject.toml
prisma/: schema.prisma
