[project]
name = "python-prisma-container"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.4",
    "prisma[node]>=0.15.0",
    "uvicorn[standard]>=0.32.0",
]


[tool.prisma]
binary_cache_dir = '.binaries'